Prevent horizontal scrollbar.

--- a/src/stylesheets/components/esper/_panel.scss
+++ b/src/stylesheets/components/esper/_panel.scss
@@ -25,7 +25,7 @@
 
   .adjustments {
     flex: 1 1 0;
-    overflow: scroll;
+    overflow-y: scroll;
     padding: 19px $default-padding-horizontal 0; // todo
   }
 
